k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soladia
  labels:
    name: soladia
    app: soladia-marketplace
